--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
     "http-proxy-middleware": "^2.0.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
