--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
+    "socket.io-client": "^4.4.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwind-styled-components": "^2.1.4",
     "web-vitals": "^2.1.4"
