--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.4.1",
     "twilio": "^3.74.0"
   }
 }
