--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
     "http-proxy-middleware": "^2.0.3",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
