--- a/client/package.json
+++ b/client/package.json
@@ -1,57 +1,38 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "cl2",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.25.0",
-    "dotenv": "^16.0.0",
-    "eslint-plugin-disable": "^2.0.3",
-    "http-proxy-middleware": "^2.0.3",
-    "js-cookie": "^3.0.1",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-google-login": "^5.2.2",
-    "react-icons": "^4.3.1",
-    "react-moment": "^1.1.1",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "recoil": "^0.6.1",
-    "socket.io-client": "^4.4.1",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwind-styled-components": "^2.1.4",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "eslint-plugin-disable": "^2.0.3",
+    "firebase": "^9.9.0",
+    "http-proxy-middleware": "^2.0.6",
+    "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
+    "react-hot-toast": "^2.3.0",
+    "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
+    "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.4",
+    "socket.io-client": "^4.5.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwind-styled-components": "^2.1.8"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.21"
+    "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
+    "vite": "^3.0.0"
   }
 }
