--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-client/node_modules
 server/node_modules
-client/.env
 server/.env
+server/package-lock.json
+client/node_modules
+client/.env
+client/package-lock.json
